Refactor package name from fr.angel.dynamicisland to com.anto426.dynamicisland
This commit updates the package name across the entire project.
All occurrences of `fr.angel.dynamicisland` in imports, package declarations, and the `AndroidManifest.xml` have been changed to `com.anto426.dynamicisland`.
The namespace in `app/build.gradle` has also been updated accordingly.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'fr.angel.dynamicisland'
+    namespace 'com.anto426.dynamicisland'
     compileSdk 36
 
     defaultConfig {
