Refactor package name and enhance Island UI
This commit refactors the package name from `fr.angel.dynamicisland` to `com.anto426.dynamicisland` across the project.

Additionally, it introduces several UI enhancements to `IslandApp.kt`:
- Updated animation spring values for `IslandHeight` and `IslandWidth` to `DampingRatioMediumBouncy` and `StiffnessLow`.
- Added labels to `animateDpAsState` and `animateFloatAsState` for better animation debugging.
- Refactored the layout of `IslandOpenedContent` and `IslandExpandedContent` into separate composable functions.
- Introduced a new `CloseHandle` composable for the expanded island state, allowing users to shrink the island.
- Changed crossfade animation duration to 300ms for island state and plugin content transitions.
- Ensured `R` imports are correctly referenced to the new package name in relevant files.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 36
 
     defaultConfig {
-        applicationId "fr.angel.dynamicisland"
+        applicationId "com.anto426.dynamicisland"
         minSdk 34
         targetSdk 36
         versionCode 5
