Refactor BatteryPlugin and update dependencies
This commit introduces several changes to the `BatteryPlugin`:
- Added a low battery warning display mode that appears when battery is below 20% and not charging. This view includes an icon, battery percentage, and buttons to dismiss or open battery saver settings.
- Refactored the charging view to use `animateFloatAsState` for smoother progress animation.
- Updated the `LeftOpenedComposable` to display different icons and colors based on whether the device is charging or has low battery.
- Updated the `RightOpenedComposable` text color to reflect battery status (charging, low battery, or normal).
- Replaced `settings.edit().putInt().apply()` with `settings.edit { putInt() }` in `IslandSettings.kt` for conciseness.
- Added `androidx.media3:media3-common-ktx:1.8.0` and `androidx.compose.runtime:runtime:1.9.0` dependencies in `app/build.gradle`.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,10 @@ dependencies {
     implementation 'io.coil-kt:coil-compose:2.7.0' // Image loading
     implementation 'com.google.code.gson:gson:2.13.1' // Serialization / Deserialization
     implementation "com.airbnb.android:lottie-compose:6.6.7" // Animations
-    implementation 'com.github.vitaviva:ComposeWaveLoading:0.1.4' // Wave animation: https://github.com/vitaviva/ComposeWaveLoading
+    implementation 'com.github.vitaviva:ComposeWaveLoading:0.1.4'
+    implementation 'androidx.media3:media3-common-ktx:1.8.0'
+    implementation 'androidx.compose.runtime:runtime:1.9.0'
+// Wave animation: https://github.com/vitaviva/ComposeWaveLoading
 
     // Compose Tests
     androidTestImplementation platform('androidx.compose:compose-bom:2025.08.00')
