Refactor UI and add Developer screen
This commit introduces a new Developer screen that displays GitHub user and repository information using Retrofit for network requests. It also refactors several UI components for a more consistent and modern card-based design, and improves navigation animations.

**New Features:**
- Added a `DeveloperScreen` to display developer information fetched from the GitHub API.
    - Includes data classes for `GitHubUser` and `GitHubRepo`.
    - Implements `GitHubApi` interface with Retrofit.
    - Adds `DeveloperRepository` for data fetching logic.
    - Introduces `DeveloperViewModel` and `DeveloperUiState` for UI state management.
    - Uses Coil for image loading.
- Added `INTERNET` permission to `AndroidManifest.xml`.

**UI Refactorings:**
- `PluginsScreen`: Redesigned with a card-based layout for plugin items.
- `HomeScreen`:
    - Grouped service status and permissions into a unified card.
    - Redesigned `DisclosureCard`, `NoPluginsActivatedCard`, `ServiceStatusCard`, and `OptimizationCard` with improved styling and Lottie animations.
    - Replaced `PermissionsCard` with individual `PermissionItem` components.
- `EnabledAppsSettingsScreen`:
    - Grouped app list within a main card.
    - Renamed `EnabledAppCard` to `AppSettingItem` and updated its design.
- `BehaviorSettingsScreen`:
    - Redesigned with cards for "Visual Behavior" and "Auto-hide" settings.
    - Renamed `SwitchSettingsItem` to `SettingSwitch` and introduced `SettingsSliderItem`.
    - Added a reusable `SettingsDivider`.
- `PositionSizeSettingsScreen`:
    - Reorganized settings into "Position", "Size", and "Corner" cards using a new `SettingsCard` component.
    - Renamed `SettingsSlider` to `SettingsSliderItem` and updated its design.
- `AboutSettingsScreen`:
    - Redesigned to display app and device information in cards.
    - Renamed `TextSettingsItem` to `InfoItem` with improved functionality (copy to clipboard, open links).
- `ThemeSettingsScreen`:
    

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,10 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
-        tools:ignore="QueryAllPackagesPermission" /> <!-- This is required for the app to fetch app icons when receiving notifications -->
+        tools:ignore="QueryAllPackagesPermission" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
