--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,14 +48,15 @@ kotlin {
     jvmToolchain(24) // Specify the Java version here
 }
 dependencies {
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.2.10"
 
-    // Compose
+    // -------------------- Compose --------------------
     implementation platform('androidx.compose:compose-bom:2025.08.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    // Override BOM version to get the below alpha version of Material3 components (used by: ModalBottomSheet)
-    implementation 'androidx.compose.material3:material3:1.3.2'
+    implementation 'androidx.compose.material3:material3:1.3.2' // override BOM version
     implementation 'androidx.compose.material:material-icons-extended'
     implementation "androidx.compose.ui:ui-text-google-fonts"
     implementation "androidx.compose.runtime:runtime-livedata"
@@ -72,35 +73,45 @@ dependencies {
     implementation "com.google.accompanist:accompanist-webview:0.36.0"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.36.0"
 
-    // Landscapist
+    // Landscapist (Glide + Palette + Animations)
     implementation 'com.github.skydoves:landscapist-bom:2.5.2'
     implementation "com.github.skydoves:landscapist-glide"
     implementation "com.github.skydoves:landscapist-palette"
     implementation "com.github.skydoves:landscapist-animation"
 
     // Other
-    implementation 'androidx.core:core-splashscreen:1.0.1' // Splash screen
-    implementation 'io.coil-kt:coil-compose:2.7.0' // Image loading
-    implementation 'com.google.code.gson:gson:2.13.1' // Serialization / Deserialization
-    implementation "com.airbnb.android:lottie-compose:6.6.7" // Animations
+    implementation 'androidx.core:core-splashscreen:1.0.1'
+    implementation 'io.coil-kt:coil-compose:2.7.0'
+    implementation 'com.google.code.gson:gson:2.13.1'
+    implementation "com.airbnb.android:lottie-compose:6.6.7"
     implementation 'com.github.vitaviva:ComposeWaveLoading:0.1.4'
     implementation 'androidx.media3:media3-common-ktx:1.8.0'
     implementation 'androidx.compose.runtime:runtime:1.9.0'
-// Wave animation: https://github.com/vitaviva/ComposeWaveLoading
 
-    // Compose Tests
+    // Lifecycle + Activity
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.2'
+    implementation 'androidx.activity:activity-compose:1.10.1'
+
+    // Retrofit + Gson
+    implementation "com.squareup.retrofit2:retrofit:3.0.0"
+    implementation "com.squareup.retrofit2:converter-gson:3.0.0"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
+
+    // -------------------- Testing --------------------
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
     androidTestImplementation platform('androidx.compose:compose-bom:2025.08.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-    implementation 'androidx.core:core-ktx:1.17.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.2'
-    implementation 'androidx.activity:activity-compose:1.10.1'
+    implementation("io.coil-kt:coil-compose:2.7.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:5.1.0")
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 
-    //implementation 'com.google.android.gms:play-services-auth:20.5.0'
 }
