--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 org.gradle.jvmargs=-Xmx16G -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
 org.gradle.parallel=true
-org.gradle.workers.max=24
+org.gradle.workers.min=24
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 org.gradle.unsafe.configuration-cache=true
 org.gradle.caching=false
 android.enableBuildFeatures.buildConfig=true
+android.useAndroidX=true
+android.enableJetifier=true
