--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ kotlin {
     jvmToolchain(24) // Specify the Java version here
 }
 dependencies {
-    // Kotlin
+    // -------------------- Kotlin --------------------
     implementation "org.jetbrains.kotlin:kotlin-stdlib:2.2.10"
 
     // -------------------- Compose --------------------
@@ -56,52 +56,56 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.3.2' // override BOM version
-    implementation 'androidx.compose.material:material-icons-extended'
+    implementation 'androidx.compose.material3:material3:1.3.2' // Material 3
+    implementation("androidx.compose.material:material-icons-core:1.7.8") // Or the latest stable version
+    implementation("androidx.compose.material:material-icons-extended:1.7.8") // Or the latest stable version
     implementation "androidx.compose.ui:ui-text-google-fonts"
     implementation "androidx.compose.runtime:runtime-livedata"
-
-    // Additional Compose dependencies
-    implementation 'androidx.constraintlayout:constraintlayout-compose:1.1.1'
-    implementation 'androidx.compose.material:material:1.9.0'
+    implementation 'androidx.compose.runtime:runtime:1.9.0'
+    implementation 'androidx.compose.animation:animation-core:1.9.0'
     implementation 'androidx.navigation:navigation-compose:2.9.3'
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.1.1'
 
-    // Accompanist
+    // -------------------- Accompanist --------------------
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.36.0"
     implementation "com.google.accompanist:accompanist-placeholder-material:0.36.0"
     implementation "com.google.accompanist:accompanist-flowlayout:0.36.0"
     implementation "com.google.accompanist:accompanist-webview:0.36.0"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.36.0"
 
-    // Landscapist (Glide + Palette + Animations)
+    // -------------------- Landscapist (Glide + Palette + Animations) --------------------
     implementation 'com.github.skydoves:landscapist-bom:2.5.2'
     implementation "com.github.skydoves:landscapist-glide"
     implementation "com.github.skydoves:landscapist-palette"
     implementation "com.github.skydoves:landscapist-animation"
 
-    // Other
-    implementation 'androidx.core:core-splashscreen:1.0.1'
+    // -------------------- Coil & Lottie --------------------
     implementation 'io.coil-kt:coil-compose:2.7.0'
-    implementation 'com.google.code.gson:gson:2.13.1'
     implementation "com.airbnb.android:lottie-compose:6.6.7"
     implementation 'com.github.vitaviva:ComposeWaveLoading:0.1.4'
-    implementation 'androidx.media3:media3-common-ktx:1.8.0'
-    implementation 'androidx.compose.runtime:runtime:1.9.0'
 
-    // Lifecycle + Activity
+    // -------------------- Media --------------------
+    implementation 'androidx.media3:media3-common-ktx:1.8.0'
+
+    // -------------------- Lifecycle + Activity --------------------
     implementation 'androidx.core:core-ktx:1.17.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.3'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.9.3'
     implementation 'androidx.activity:activity-compose:1.10.1'
 
-    // Retrofit + Gson
+    // -------------------- Networking (Retrofit + OkHttp) --------------------
     implementation "com.squareup.retrofit2:retrofit:3.0.0"
     implementation "com.squareup.retrofit2:converter-gson:3.0.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.1.0"
+    implementation "com.squareup.okhttp3:okhttp-dnsoverhttps:5.1.0"
+    implementation 'com.google.code.gson:gson:2.13.1'
 
-    // Coroutines
+    // -------------------- Coroutines --------------------
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
-    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.9.3'
-    implementation 'androidx.compose.animation:animation-core:1.9.0'
+
+    // -------------------- Other --------------------
+    implementation 'androidx.core:core-splashscreen:1.0.1'
 
     // -------------------- Testing --------------------
     testImplementation 'junit:junit:4.13.2'
@@ -111,11 +115,4 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
-    implementation("io.coil-kt:coil-compose:2.7.0")
-    implementation("com.squareup.okhttp3:logging-interceptor:5.1.0")
-    implementation("com.squareup.okhttp3:okhttp-dnsoverhttps:5.1.0")
-
-
-
 }
