--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.3.2' // Material 3
+    implementation 'androidx.compose.material3:material3:1.5.0-alpha03' // Material 3
     implementation("androidx.compose.material:material-icons-core:1.7.8") // Or the latest stable version
     implementation("androidx.compose.material:material-icons-extended:1.7.8") // Or the latest stable version
     implementation "androidx.compose.ui:ui-text-google-fonts"
