feat: Add advanced settings screen and update application structure
- Introduced AdvancedSettingsScreen for advanced configuration options.
- Added DynamicIslandApplication class to manage WorkManager configuration.
- Implemented DynamicThemeManager for dynamic theming based on battery status.
- Created GitHubApiManager to handle GitHub API interactions for update checks.
- Developed UpdateCheckWorker for periodic update checks and notifications.
- Implemented UpdateDownloadService for downloading and installing APK updates.
- Added UpdateManager to manage update states and preferences.
- Created XML file_paths.xml for file provider configuration.
- Updated Settings.kt to include advanced settings in the settings list.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,8 +104,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
 
+    // -------------------- WorkManager (per aggiornamenti automatici) --------------------
+    implementation "androidx.work:work-runtime-ktx:2.10.0"
+
     // -------------------- Other --------------------
-    implementation 'androidx.core:core-splashscreen:1.0.1'
 
     // -------------------- Testing --------------------
     testImplementation 'junit:junit:4.13.2'
