--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.anto426.dynamicisland"
         minSdk 34
         targetSdk 36
-        versionCode 9
-        versionName '2.1.1'
+        versionCode 8
+        versionName '2.1.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -98,6 +98,7 @@ dependencies {
     // -------------------- Networking (Retrofit + OkHttp) --------------------
     implementation "com.squareup.retrofit2:retrofit:3.0.0"
     implementation "com.squareup.retrofit2:converter-gson:3.0.0"
+    implementation "com.squareup.okhttp3:okhttp:5.1.0"
     implementation "com.squareup.okhttp3:logging-interceptor:5.1.0"
     implementation "com.squareup.okhttp3:okhttp-dnsoverhttps:5.1.0"
     implementation 'com.google.code.gson:gson:2.13.1'
@@ -108,6 +109,7 @@ dependencies {
 
     // -------------------- WorkManager (per aggiornamenti automatici) --------------------
     implementation "androidx.work:work-runtime-ktx:2.10.3"
+    implementation 'com.android.volley:volley:1.2.1'
 
     // -------------------- Other --------------------
 
