--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.anto426.dynamicisland"
         minSdk 34
         targetSdk 36
-        versionCode 9
-        versionName '2.1.1'
+        versionCode 8
+        versionName '2.1.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -110,8 +110,9 @@ dependencies {
     // -------------------- WorkManager (per aggiornamenti automatici) --------------------
     implementation "androidx.work:work-runtime-ktx:2.10.3"
     implementation 'com.android.volley:volley:1.2.1'
-
-    // -------------------- Other --------------------
+    implementation 'androidx.compose.foundation:foundation:1.9.0'
+    implementation 'androidx.compose.animation:animation:1.9.0'
+    implementation 'androidx.compose.ui:ui:1.9.0'
 
     // -------------------- Testing --------------------
     testImplementation 'junit:junit:4.13.2'
